--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,17 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pyguard"
-version = "0.1.0"
+name = "pyguard-args"
+version = "0.1.1"
 authors = [{name = "Mateusz Jasinski", email = "mateusz@jasinski.software"}]
 description = "A Python library for validating function arguments using decorators"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -57,7 +56,7 @@ exclude_lines = [
 
 [tool.ruff]
 line-length = 120
-target-version = "py39"
+target-version = "py310"
 lint.select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
