--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,13 @@ keywords = ["validation", "decorator", "arguments", "type-checking"]
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "pytest-asyncio>=0.21.0",
     "ruff>=0.1.0",
 ]
 test = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "pytest-asyncio>=0.21.0",
 ]
 
 [project.urls]
