--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -2,9 +2,7 @@ name: PR Validation
 
 on:
   pull_request:
-    branches: [ main, develop ]
-  push:
-    branches: [ main, develop ]
+    types: [opened, synchronize]
 
 jobs:
   lint:
