--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -2,9 +2,7 @@ name: PR Validation
 
 on:
   pull_request:
-    branches: [ main, develop ]
-  push:
-    branches: [ main, develop ]
+    types: [opened, synchronize]
 
 jobs:
   lint:
@@ -46,7 +44,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-asyncio pytest-cov
           pip install -e .
       
       - name: Run tests
@@ -75,7 +73,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-asyncio pytest-cov
           pip install -e .
       
       - name: Run tests with coverage
